--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ console.log(localStorage.getItem("btn_click"));
 // on gère le filtrage des données en amont de tous les exemples... si l'envoi de vient pas du bouton
 if (JSON.parse(localStorage.getItem("btn_click")) === false)
 	{  
-var tableau_sortie = data.filter(function(element) {
+tableau_sortie = data.filter(function(element) {
     return (element.asl >= 0);});
 	}
 	else
 	{  
-var tableau_sortie = data.filter(function(element) {
+tableau_sortie = data.filter(function(element) {
     return (element.asl >= 1);});
 	}
 }
