--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
         exemple1();
 	exemple2();
 	exemple3();
+     localStorage.setItem("btn_click", false);
     }
     
  </script>
