--- a/index.html
+++ b/index.html
@@ -515,6 +515,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
 	exemple2();
 	exemple3();
      localStorage.setItem("btn_click", false);
+     console.log(localStorage.getItem("btn_click"));
     }
     
  </script>
