--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ var tableau_sortie = [] ;
 	
 function test() {
 localStorage.setItem("btn_click", true) ;
+console.log(document.getElementsByName('asl2').checked);
 localStorage.setItem("filtre_ASL", document.getElementsByName('asl2').checked) ;
 window.location.reload();
 console.log(localStorage.getItem("btn_click"));
