--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 <script>
 var tableau_sortie = [] ;
+localStorage.setItem("filtre_ASL", false) ;
 	
 function test() {
 localStorage.setItem("btn_click", true) ;
