--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ console.log(document.getElementsByName('asl2').checked);
 localStorage.setItem("filtre_ASL", document.getElementsByName('asl2').checked) ;
 window.location.reload();
 console.log(localStorage.getItem("btn_click"));
+console.log(localStorage.getItem("filtre_ASL"));
 };
      
 </script>
