--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ localStorage.setItem("filtre_ASL", false) ;
 	
 function test() {
 localStorage.setItem("btn_click", true) ;
-console.log(document.getElementsByName('asl2').checked);
+console.log(document.getElementById('asl2').checked);
 localStorage.setItem("filtre_ASL", document.getElementsByName('asl2').checked) ;
 window.location.reload();
 console.log(localStorage.getItem("btn_click"));
