--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ function test() {
 localStorage.setItem("btn_click", true) ;
 console.log(document.getElementById('asl2').checked);
 localStorage.setItem("filtre_ASL", document.getElementsByName('asl2').checked) ;
+console.log(localStorage.getItem("filtre_ASL"));
 window.location.reload();
 console.log(localStorage.getItem("btn_click"));
 console.log(localStorage.getItem("filtre_ASL"));
