--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ tableau_sortie = data.filter(function(element) {
 	}
 	else
 	{
+ console.log(localStorage.getItem("filtre_ASL"));
 // on place des filtres fonction de ce qui a été sélectionné par l'utilisateur
 	if (JSON.parse(localStorage.getItem("filtre_ASL")) === true)
 		{tableau_sortie = data.filter(function(element) {
