--- a/index.html
+++ b/index.html
@@ -520,6 +520,8 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
   window.onload = function()
     {
     	chargement_donnees();
+	console.log(localStorage.getItem("btn_click"));	  
+	console.log(localStorage.getItem("filtre_ASL"));
         exemple1();
 	exemple2();
 	exemple3();
