--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </fieldset>
 </form>
 <div>	
-<input type="button" name="bout" value="Générer l'analyse" onClick="test()" style="height:50px; width:100%"/>
+<input type="button" name="bout" value="Générer l'analyse" onClick="test()" style="height:50px; width:100%" background-color:"blue"/>
 </div>
 
 <script>
