--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </fieldset>
 </form>
 <div>	
-<input type="button" name="bout" value="Générer l'analyse" onClick="test()" style="height:50px; width:100%; background-color:blue" />
+<input type="button" name="bout" value="Générer l'analyse" onClick="test()" style="height:50px; width:50%; margin-left:25%; margin-right:25%; background-color:#008080" />
 </div>
 
 <script>
