--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 </fieldset>
 </form>
 <div>	
-<input type="button" name="bout" value="Générer l'analyse" onClick="test()" style="height:50px; width:50%; margin-left:25%; margin-right:25%; background-color:#008080" />
+<input type="button" name="bout" value="Générer l'analyse" onClick="test()"
+       style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 2cm;margin-bottom: 2cm; background-color:#B0C4DE" />
 </div>
 
 <script>
