--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 var tableau_sortie = [] ;
 	
 function test() {
+document.getElementById('bout').value = "Génération de l'analyse en cours" ;
 localStorage.setItem("btn_click", true) ;
 if (document.getElementById('asl2').checked)
 {
