--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </fieldset>
 </form>
 <div>	
-<input type="button" name="bout" value="Générer l'analyse" onClick="test()"
+<input type="button" id = "bouton_filtre_asl" name="bout" value="Générer l'analyse" onClick="test()"
        style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 0.5cm;margin-bottom: 0.5cm; background-color:#B0C4DE" />
 </div>
 
@@ -73,16 +73,13 @@
 var tableau_sortie = [] ;
 	
 function test() {
-document.getElementById('bout').value = "Génération de l'analyse en cours" ;
+document.getElementById('bouton_filtre_asl').value = "Génération de l'analyse en cours" ;
 localStorage.setItem("btn_click", true) ;
 if (document.getElementById('asl2').checked)
 {
-console.log('hello');
 localStorage.setItem("filtre_ASL", true) ;
 }
-console.log(localStorage.getItem("filtre_ASL"));
 window.location.reload();
-console.log(localStorage.getItem("filtre_ASL"));
 };
      
 </script>
