--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-      <h3>Adhérents de la 20ème Chaise - Saisons 2018-19 et 2019-2020 </h3>
+      <h3>Public de la 20ème Chaise - Saisons 2018-19 et 2019-2020 </h3>
         <a href="https://www.la20emechaise.org/" class="button">Site internet du centre social</a>
       </div>
     </header>
