--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 <form id="filtre">
 <fieldset>
   <legend>Vous pouvez filtrer les données selon les critères suivants :</legend>
-
+<div>
+<input type="checkbox" id ="filtre_ASL" name="type_filtre"/>
+<label for="filtre_ASL">ASL</label>
+</div>
 <div>
 <input type="radio" id ="asl1" name="asl" value="asl1"/ checked>
 <label for="asl1">pas de filtre ASL</label>
