--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
 <div>
 <input type="checkbox" id ="filtre_ASL" name="type_filtre"/>
 <label for="filtre_ASL">ASL</label>
-<input type="checkbox" id ="filtre_benevole" name="type_filtre"/>
-<label for="filtre_benevole">Bénévoles</label>
 </div>
 <div>
 <input type="radio" id ="asl1" name="asl" value="asl1"/ checked>
@@ -66,6 +64,10 @@
 <div>
 <input type="radio" id ="asl2" name="asl" value="asl2"/>
 <label for="asl2">inscrits uniquement aux ASL</label>
+</div>
+<div>
+<input type="checkbox" id ="filtre_benevole" name="type_filtre"/>
+<label for="filtre_benevole">Bénévoles</label>
 </div>
 </fieldset>
 </form>
