--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
     - on va étudier :  <br>
 	- Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville,  <br>
-	aux quartiers de veille active et aux anciens quartiers de veille;  <br>
-	- Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise. <br>
+	aux quartiers de veille active et aux anciens quartiers de veille  <br>
+	- Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise <br>
 	- Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
 </p>
 
@@ -68,6 +68,14 @@
 <div>
 <input type="checkbox" id ="filtre_benevole" name="type_filtre"/>
 <label for="filtre_benevole">Bénévoles</label>
+</div>
+<div>
+<input type="radio" id ="bene1" name="bene" value="bene1"/ checked>
+<label for="asl1">pas de filtre bénévole</label>
+</div>
+<div>
+<input type="radio" id ="bene2" name="bene" value="bene2"/>
+<label for="asl2">bénévole sur au moins un type d'activité</label>
 </div>
 </fieldset>
 </form>
