--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 <input type="radio" id ="bene2" name="bene" value="bene2"/>
 <label for="asl2">bénévole sur au moins un type d'activité</label>
 </div>
+<div>
+<input type="checkbox" id ="filtre_type_act" name="type_filtre"/>
+<label for="filtre_type_act">Nombre d'inscriptions à des types d'activités différents</label>
+</div>
+<input type="checkbox" id ="filtre_nb_act" name="type_filtre"/>
+<label for="filtre_nb_act">Nombre d'inscriptions total aux activités</label>
+</div>
 </fieldset>
 </form>
 <div>	
