--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <input type="checkbox" id ="filtre_type_act" name="type_filtre"/>
 <label for="filtre_type_act">Nombre d'inscriptions à des types d'activités différents</label>
 </div>
+<div id="type_act"></div>
 <input type="checkbox" id ="filtre_nb_act" name="type_filtre"/>
 <label for="filtre_nb_act">Nombre d'inscriptions total aux activités</label>
 </div>
@@ -92,6 +93,45 @@
 <input type="button" id = "bouton_filtre_asl" name="bout" value="Générer l'analyse" onClick="test()"
        style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 0.5cm;margin-bottom: 0.5cm; background-color:#B0C4DE" />
 </div>
+	   
+<script>
+    var range = document.getElementById('type_act');
+
+    noUiSlider.create(range, {
+        start: [ 20, 80 ], // Handle start position
+        step: 10, // Slider moves in increments of '10'
+        margin: 20, // Handles must be more than '20' apart
+        connect: true, // Display a colored bar between the handles
+        direction: 'rtl', // Put '0' at the bottom of the slider
+        orientation: 'vertical', // Orient the slider vertically
+        behaviour: 'tap-drag', // Move handle on tap, bar is draggable
+        range: { // Slider can select '0' to '100'
+            'min': 0,
+            'max': 100
+        },
+        pips: { // Show a scale with the slider
+            mode: 'steps',
+            density: 2
+        }
+    });
+
+    var valueInput = document.getElementById('value-input'),
+            valueSpan = document.getElementById('value-span');
+
+    // When the slider value changes, update the input and span
+    range.noUiSlider.on('update', function( values, handle ) {
+        if ( handle ) {
+            valueInput.value = values[handle];
+        } else {
+            valueSpan.innerHTML = values[handle];
+        }
+    });
+
+    // When the input changes, set the slider value
+    valueInput.addEventListener('change', function(){
+        range.noUiSlider.set([null, this.value]);
+    });
+</script>
 
 <script>
 var tableau_sortie = [] ;
