--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 </div>
 <div>
 <input type="checkbox" id ="filtre_type_act" name="type_filtre"/>
-<label for="filtre_type_act">Nombre d'inscriptions à des types d'activités différents</label>
+<label for="filtre_type_act">Nombre de types d'activités auxquelles le public s'est inscrit</label>
 </div>
 <!--
 <div id="type_act"></div>
 //-->
 <input type="checkbox" id ="filtre_nb_act" name="type_filtre"/>
-<label for="filtre_nb_act">Nombre d'inscriptions total aux activités</label>
+<label for="filtre_nb_act">Nombre de d'activités auxquelles le public s'est inscrit</label>
 </div>
 </fieldset>
 </form>
