--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
        style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 0.5cm;margin-bottom: 0.5cm; background-color:#B0C4DE" />
 </div>
 
+<script>
 document.getElementsByName('bene').style.display = "none" ;
-	      
+</script>      
 	   
 <script>
 /*
