--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 </div>
 
 <script>
-document.getElementsByName('bene').style.display = "none" ;
+(for i=0 ; i < document.getElementsByName('bene').style.display = "none" ; i++)
+{document.getElementsByName('bene')[i].style.display = "none" ;}
 </script>      
 	   
 <script>
