--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </div>
 
 <script>
-(for i=0 ; i < document.getElementsByName('bene').style.display = "none" ; i++)
+(for i=0 ; i < document.getElementsByName('bene').length ; i++)
 {document.getElementsByName('bene')[i].style.display = "none" ;}
 </script>      
 	   
