--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 </div>
 
 <script>
-(for i=0 ; i < document.getElementsByName('bene').length ; i++)
-{document.getElementsByName('bene')[i].style.display = "none" ;}
+(for let i=0 ; i < document.getElementsByName('bene').length ; i++)
+{document.getElementsByName('bene')[i].style.display = "none" ;};
 </script>      
 	   
 <script>
