--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 </div>
 
 <script>
+console.log(document.getElementsByName('bene').length) ;
 (for let i=0 ; i < document.getElementsByName('bene').length ; i++)
 {document.getElementsByName('bene')[i].style.display = "none" ;};
 </script>      
