--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 </div>
 
 <script>
-console.log(document.getElementsByName('bene').length) ;
+for (let i=0 ; i < document.getElementsByName('bene').length ; i++)
+{document.getElementsByName('bene')[i].style.display = "none" ;};
 </script>      
 	   
 <script>
