--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 </div>
 
 <script>
-for (let i=0 ; i < document.getElementsByName('bene').length ; i++)
-{document.getElementsByName('bene')[i].style.display = "none" ;};
+for (let i=0 ; i < document.getElementsByName('asl').length ; i++)
+{document.getElementsByName('asl')[i].style.display = "none" ;};
+{document.getElementsByName('asl')[i].label.style.display = "none" ;};
 </script>      
 	   
 <script>
