--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 <script>
 for (let i=0 ; i < document.getElementsByName('asl').length ; i++)
-{document.getElementsByName('asl')[i].style.display = "none" ;};
-{document.getElementsByName('asl')[i].label.style.display = "none" ;};
+{document.getElementsByName('asl')[i].style.display = "none" ;
+ document.getElementsByName('asl')[i].label.style.display = "none" ;};
 </script>      
 	   
 <script>
