--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 <input type="checkbox" id ="filtre_ASL" name="type_filtre"/>
 <label for="filtre_ASL">ASL</label>
 </div>
-<div>
+<div style="display: none;">
 <input type="radio" id ="asl1" name="asl" value="asl1"/ checked>
 <label for="asl1">pas de filtre ASL</label>
 </div>
-<div>
+<div style="display: none;">
 <input type="radio" id ="asl2" name="asl" value="asl2"/>
 <label for="asl2">inscrits uniquement aux ASL</label>
 </div>
