--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 <input type="checkbox" id ="filtre_benevole" name="type_filtre"/>
 <label for="filtre_benevole">Bénévoles</label>
 </div>
-<div>
+<div style="display: none;">
 <input type="radio" id ="bene1" name="bene" value="bene1"/ checked>
 <label for="asl1">pas de filtre bénévole</label>
-</div>
+</div style="display: none;">
 <div>
 <input type="radio" id ="bene2" name="bene" value="bene2"/>
 <label for="asl2">bénévole sur au moins un type d'activité</label>
