--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <div style="display: none;">
 <input type="radio" id ="bene1" name="bene" value="bene1"/ checked>
 <label for="asl1">pas de filtre bénévole</label>
-</div style="display: none;">
-<div>
+</div>
+<div style="display: none;">
 <input type="radio" id ="bene2" name="bene" value="bene2"/>
 <label for="asl2">bénévole sur au moins un type d'activité</label>
 </div>
