--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 <input type="button" id = "bouton_filtre_asl" name="bout" value="Générer l'analyse" onClick="test()"
        style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 0.5cm;margin-bottom: 0.5cm; background-color:#B0C4DE" />
 </div>
-    
+
+for (i=0 ; i < document.getElementsByClassName('radio_asl').length)
+{document.getElementsByClassName('radio_asl')[i].style = "display : inline" ;} ;
 	   
 <script>
 /*
