--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
        style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 0.5cm;margin-bottom: 0.5cm; background-color:#B0C4DE" />
 </div>
 
+<script>
 for (i=0 ; i < document.getElementsByClassName('radio_asl').length)
 {document.getElementsByClassName('radio_asl')[i].style = "display : inline" ;} ;
-	   
+</script>
+	      
 <script>
 /*
     var range = document.getElementById('type_act');
