--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </div>
 
 <script>
-for (i=0 ; i < document.getElementsByClassName('radio_asl').length)
+for (i=0 ; i < document.getElementsByClassName('radio_asl').length ; i++)
 {document.getElementsByClassName('radio_asl')[i].style = "display : inline" ;} ;
 </script>
 	      
