--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 </div>
 
 <script>
+var cases = document.querySelector('input[name="type_filtre"]');
+console.log(cases);
+</script>
+
+<script>
 for (i=0 ; i < document.getElementsByClassName('radio_asl').length ; i++)
 {document.getElementsByClassName('radio_asl')[i].style = "display : inline" ;} ;
 </script>
