--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 </div>
 
 <script>
-var cases = document.querySelector('input[name="type_filtre"]');
-console.log(cases);
+var cases = document.querySelectorAll('input[name="type_filtre"]');
+console.log(cases.length);
 </script>
 
 <script>
