--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ var cases = document.querySelectorAll('input[name="type_filtre"]');
 cases.forEach(function(checkbox) {
   checkbox.addEventListener('change', function() {
     enabledSettings = 
-      Array.from(cases.checked) // Convert checkboxes to an array to use filter and map.
+      Array.from(cases) // Convert checkboxes to an array to use filter and map.
       // .filter(i => i.checked) // Use Array.filter to remove unchecked checkboxes.
-      // .map(i => i.value) // Use Array.map to extract only the checkbox values from the array of objects.
+      .map(i => i.value) // Use Array.map to extract only the checkbox values from the array of objects.
     console.log(enabledSettings)
   })
 });
