--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ cases.forEach(function(checkbox) {
     enabledSettings = 
       Array.from(cases) // Convert checkboxes to an array to use filter and map.
       // .filter(i => i.checked) // Use Array.filter to remove unchecked checkboxes.
-      .map(i => i.value) // Use Array.map to extract only the checkbox values from the array of objects.
+      .map(i => i.checked) // Use Array.map to extract only the checkbox values from the array of objects.
     console.log(enabledSettings)
   })
 });
