--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <label for="filtre_ASL">ASL</label>
 </div>
 <div class="radio_asl" style="display: none;">
-<input type="radio" id ="asl1" name="asl" value="asl1"/ checked>
+<input type="radio" id ="asl1" name="asl"/ checked>
 <label for="asl1">pas de filtre ASL</label>
-<input type="radio" id ="asl2" name="asl" value="asl2"/>
+<input type="radio" id ="asl2" name="asl"/>
 <label for="asl2">inscrits uniquement aux ASL</label>
 </div>
 <div>
@@ -70,18 +70,21 @@
 <label for="filtre_benevole">Bénévoles</label>
 </div>
 <div class="radio_bene" style="display: none;">
-<input type="radio" id ="bene1" name="bene" value="bene1"/ checked>
+<input type="radio" id ="bene1" name="bene"/ checked>
 <label for="asl1">pas de filtre bénévole</label>
-<input type="radio" id ="bene2" name="bene" value="bene2"/>
+<input type="radio" id ="bene2" name="bene"/>
 <label for="asl2">bénévole sur au moins un type d'activité</label>
 </div>
 <div>
 <input type="checkbox" id ="filtre_type_act" name="type_filtre"/>
 <label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label>
 </div>
-<!--
-<div id="type_act"></div>
-//-->
+<div class="radio_type_act" style="display: none;">
+<input type="radio" id ="type_act_1" name="type_act"/ checked>
+<label for="type_act_1">pas de filtre</label>
+<input type="radio" id ="type_act_2" name="type_act"/>
+<label for="type_act_2">filtre</label>
+</div>
 <input type="checkbox" id ="filtre_nb_act" name="type_filtre"/>
 <label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label>
 </div>
