--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <input type="checkbox" id ="filtre_ASL" name="type_filtre"/>
 <label for="filtre_ASL">ASL</label>
 </div>
-<div class="radio_asl" style="display: none;">
+<div class="radio_0" style="display: none;">
 <input type="radio" id ="asl1" name="asl"/ checked>
 <label for="asl1">pas de filtre ASL</label>
 <input type="radio" id ="asl2" name="asl"/>
@@ -69,7 +69,7 @@
 <input type="checkbox" id ="filtre_benevole" name="type_filtre"/>
 <label for="filtre_benevole">Bénévoles</label>
 </div>
-<div class="radio_bene" style="display: none;">
+<div class="radio_1" style="display: none;">
 <input type="radio" id ="bene1" name="bene"/ checked>
 <label for="asl1">pas de filtre bénévole</label>
 <input type="radio" id ="bene2" name="bene"/>
@@ -79,7 +79,7 @@
 <input type="checkbox" id ="filtre_type_act" name="type_filtre"/>
 <label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label>
 </div>
-<div class="radio_type_act" style="display: none;">
+<div class="radio_2" style="display: none;">
 <input type="radio" id ="type_act_1" name="type_act"/ checked>
 <label for="type_act_1">pas de filtre</label>
 <input type="radio" id ="type_act_2" name="type_act"/>
@@ -87,6 +87,12 @@
 </div>
 <input type="checkbox" id ="filtre_nb_act" name="type_filtre"/>
 <label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label>
+</div>
+<div class="radio_3" style="display: none;">
+<input type="radio" id ="nb_act_1" name="nb_act"/ checked>
+<label for="nb_act_1">pas de filtre</label>
+<input type="radio" id ="nb_act_2" name="nb_act"/>
+<label for="nb_act_2">filtre</label>
 </div>
 </fieldset>
 </form>
