--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ cases.forEach(function(checkbox) {
 </script>
 
 <script>
-for (i=0 ; i < document.getElementsByClassName('radio_asl').length ; i++)
-{document.getElementsByClassName('radio_asl')[i].style = "display : inline" ;} ;
+for (i=0 ; i < document.getElementsByClassName('radio_0').length ; i++)
+{document.getElementsByClassName('radio_asl')[0].style = "display : inline" ;} ;
 </script>
 	      
 <script>
