--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ cases.forEach(function(checkbox) {
 
 <script>
 for (i=0 ; i < document.getElementsByClassName('radio_0').length ; i++)
-{document.getElementsByClassName('radio_asl')[0].style = "display : inline" ;} ;
+{document.getElementsByClassName('radio_0')[i].style = "display : inline" ;} ;
 </script>
 	      
 <script>
