--- a/index.html
+++ b/index.html
@@ -102,14 +102,15 @@
 </div>
 
 <script>
+var valeurs_check_boxes = [] ;
 var cases = document.querySelectorAll('input[name="type_filtre"]');
 cases.forEach(function(checkbox) {
   checkbox.addEventListener('change', function() {
-    enabledSettings = 
+    valeurs_check_boxes = 
       Array.from(cases) // Convert checkboxes to an array to use filter and map.
       // .filter(i => i.checked) // Use Array.filter to remove unchecked checkboxes.
       .map(i => i.checked) // Use Array.map to extract only the checkbox values from the array of objects.
-    console.log(enabledSettings)
+    console.log(valeurs_check_boxes)
   })
 });
 </script>
