--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ cases.forEach(function(checkbox) {
 
 valeurs_check_boxes.forEach(function(element))
 {
-if (element == true) then
+if (element === true)
 	{for (let i=0 ; i < document.getElementsByClassName('radio_0').length ; i++)
 		{document.getElementsByClassName('radio_0')[i].style = "display : inline" ;} ;
 	}
