--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@ cases.forEach(function(checkbox) {
 valeurs_check_boxes.forEach(function(element))
 {
 if (element === true)
-	{for (let i=0 ; i < document.getElementsByClassName('radio_0').length ; i++)
-		{document.getElementsByClassName('radio_0')[i].style = "display : inline" ;} ;
+	{for (let i=0 ; i < document.getElementsByClassName('radio_' + element.index).length ; i++)
+		{document.getElementsByClassName('radio' + element.index)[i].style = "display : inline" ;} ;
 	}
 	else
-	{for (let i=0 ; i < document.getElementsByClassName('radio_0').length ; i++)
-		{document.getElementsByClassName('radio_0')[i].style = "display : none" ;} ;
+	{for (let i=0 ; i < document.getElementsByClassName('radio' + element.index).length ; i++)
+		{document.getElementsByClassName('radio' + element.index)[i].style = "display : none" ;} ;
 	}
 
 }
