--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ cases.forEach(function(checkbox) {
   })
 });
 
-valeurs_check_boxes.forEach(function(element))
+valeurs_check_boxes.forEach(function(element)
 {
 if (element === true)
 	{for (let i=0 ; i < document.getElementsByClassName('radio_' + element.index).length ; i++)
@@ -124,7 +124,7 @@ if (element === true)
 		{document.getElementsByClassName('radio' + element.index)[i].style = "display : none" ;} ;
 	}
 
-}
+})
 </script>
 
 <script>
