--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ cases.forEach(function(checkbox) {
     valeurs_check_boxes = 
       Array.from(cases) // Convert checkboxes to an array to use filter and map.
       // .filter(i => i.checked) // Use Array.filter to remove unchecked checkboxes.
-      .map(i => i.checked) // Use Array.map to extract only the checkbox values from the array of objects.
+      .map(i => i.checked); // Use Array.map to extract only the checkbox values from the array of objects.
     valeurs_check_boxes.forEach(function(element)
 {
 if (element === true)
