--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ cases.forEach(function(checkbox) {
       // .filter(i => i.checked) // Use Array.filter to remove unchecked checkboxes.
       .map(i => i.checked); // Use Array.map to extract only the checkbox values from the array of objects.
     valeurs_check_boxes.forEach(function(element)
-{
+{console.log('hello') ;
 if (element === true)
 	{for (let i=0 ; i < document.getElementsByClassName('radio_' + element.index).length ; i++)
 		{document.getElementsByClassName('radio' + element.index)[i].style = "display : inline" ;} ;
