--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ cases.forEach(function(checkbox) {
       Array.from(cases) // Convert checkboxes to an array to use filter and map.
       // .filter(i => i.checked) // Use Array.filter to remove unchecked checkboxes.
       .map(i => i.checked); // Use Array.map to extract only the checkbox values from the array of objects.
+	 console.log(valeurs_check_boxes.length) ; 
     valeurs_check_boxes.forEach(function(element)
 {console.log('hello') ;
 if (element === true)
