--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </fieldset>
 </form>
 <div>	
-<input type="button" id = "bouton_filtre_asl" name="bout" value="Générer l'analyse" onClick="test()"
+<input type="button" id = "bouton_envoi" name="bout" value="Générer l'analyse" onClick="test()"
        style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 0.5cm;margin-bottom: 0.5cm; background-color:#B0C4DE" />
 </div>
 
@@ -181,8 +181,8 @@ for (i=0 ; i < document.getElementsByClassName('radio_0').length ; i++)
 var tableau_sortie = [] ;
 	
 function test() {
-document.getElementById('bouton_filtre_asl').value = "Génération de l'analyse en cours..." ;
-document.getElementById('bouton_filtre_asl').style.backgroundColor = "#FF8C00" ;
+document.getElementById('bouton_envoi').value = "Génération de l'analyse en cours..." ;
+document.getElementById('bouton_envoi').style.backgroundColor = "#FF8C00" ;
 localStorage.setItem("btn_click", true) ;
 if (document.getElementById('asl2').checked)
 {
