--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ var cases = document.querySelectorAll('input[name="type_filtre"]');
 cases.forEach(function(checkbox) {
   checkbox.addEventListener('change', function() {
     if (checkbox.checked === true)
-    {console.log('oui') ;}
+    {console.log('oui' + checkbox.index) ;}
     else
-    {console.log('non') ;}	    
+    {console.log('non' + checkbox.index) ;}	    
   })
 });
 
