--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ cases.forEach(function(checkbox
   checkbox.addEventListener('change', function(index) {
     if (checkbox.checked === true)
 	    
-    {console.log('oui') + index ;}
+    {console.log('oui '+ index)  ;}
     else
-    {console.log('non') + index ;}	    
+    {console.log('non ' + index) ;}	    
   })
 });
 
