--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
 <script>
 var valeurs_check_boxes = [] ;
 var cases = document.querySelectorAll('input[name="type_filtre"]');
-cases.forEach(function(checkbox 
-) {
+cases.forEach(function(checkbox,index) {
   checkbox.addEventListener('change', function(index) {
     if (checkbox.checked === true)
 	    
