--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <fieldset>
   <legend>Vous pouvez filtrer les données selon les critères suivants :</legend>
 <div>
-<input type="checkbox" id ="filtre_ASL" name="type_filtre"/>
+<input type="checkbox" num_cb="1" id ="filtre_ASL" name="type_filtre"/>
 <label for="filtre_ASL">ASL</label>
 </div>
 <div class="radio_0" style="display: none;">
@@ -66,7 +66,7 @@
 <label for="asl2">inscrits uniquement aux ASL</label>
 </div>
 <div>
-<input type="checkbox" id ="filtre_benevole" name="type_filtre"/>
+<input type="checkbox" num_cb="2" id ="filtre_benevole" name="type_filtre"/>
 <label for="filtre_benevole">Bénévoles</label>
 </div>
 <div class="radio_1" style="display: none;">
@@ -76,7 +76,7 @@
 <label for="asl2">bénévole sur au moins un type d'activité</label>
 </div>
 <div>
-<input type="checkbox" id ="filtre_type_act" name="type_filtre"/>
+<input type="checkbox" num_cb="3" id ="filtre_type_act" name="type_filtre"/>
 <label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label>
 </div>
 <div class="radio_2" style="display: none;">
@@ -85,7 +85,7 @@
 <input type="radio" id ="type_act_2" name="type_act"/>
 <label for="type_act_2">filtre</label>
 </div>
-<input type="checkbox" id ="filtre_nb_act" name="type_filtre"/>
+<input type="checkbox" num_cb="4" id ="filtre_nb_act" name="type_filtre"/>
 <label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label>
 </div>
 <div class="radio_3" style="display: none;">
